add ArrayDeque class

--- a/algorithm/algorithm.vcxproj
+++ b/algorithm/algorithm.vcxproj
@@ -127,9 +127,11 @@
     <ClCompile Include="ArrayQueue.cpp" />
     <ClCompile Include="ArrayStack.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="ArrayDeque.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="array.h" />
+    <ClInclude Include="ArrayDeque.h" />
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="ArrayStack.h" />
   </ItemGroup>
