add SLList class

--- a/algorithm/algorithm.vcxproj
+++ b/algorithm/algorithm.vcxproj
@@ -128,12 +128,14 @@
     <ClCompile Include="ArrayStack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ArrayDeque.cpp" />
+    <ClCompile Include="SLList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="array.h" />
     <ClInclude Include="ArrayDeque.h" />
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="ArrayStack.h" />
+    <ClInclude Include="SLList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
