add DLList class

--- a/algorithm/algorithm.vcxproj
+++ b/algorithm/algorithm.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="array.cpp" />
     <ClCompile Include="ArrayQueue.cpp" />
     <ClCompile Include="ArrayStack.cpp" />
+    <ClCompile Include="DLList.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ArrayDeque.cpp" />
     <ClCompile Include="SLList.cpp" />
@@ -135,6 +136,7 @@
     <ClInclude Include="ArrayDeque.h" />
     <ClInclude Include="ArrayQueue.h" />
     <ClInclude Include="ArrayStack.h" />
+    <ClInclude Include="DLList.h" />
     <ClInclude Include="SLList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
